--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #010e39;
+     background-color: #010e39; 
 }
 /*
 body{
@@ -67,4 +67,19 @@ h1{
 }
 .text-center{
     text-align: center;
+}
+/*Estilos para la pagina Publicaciones*/
+.bg-beige{
+    background-color: #eef3ed;
+  }
+.bg-light-blue{
+    background-color:  #b8d7d4!important;
+}
+.container-publish{
+    border-radius: 5px;
+    padding: 10px;
+}
+.main{
+    position: absolute;
+    top:500px;
 }
