--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -8,35 +8,36 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/newsfeedquery.css">
   <link rel="stylesheet" href="../css/newsfeed.css">
 </head>
 <body>
   <!-- navigation -->
-  <div>
-    <div class="container-fluid">
-      <h1 class="white-text bg-header">myPlace</h1>
-      <div class="container form-login">
-        <span class="fa fa-search icon-search" aria-hidden="true"></span>
+    <div class="container-fluid bg-header">
+      <h1 class="white-text myText"><span class="myLogo">myPlace</span></h1>
+      <div class="form-login">
+        <!--<span class="fa fa-search icon-search" aria-hidden="true"></span>-->
         <input id="search" type="text" class="white s" placeholder="Buscar">
       </div>
-      <div class="icons">
+      <div class="icons teal">
         <i class="fa fa-users white-text" aria-hidden="true"></i>
         <i class="fa fa-envelope white-text" aria-hidden="true"></i>
         <i class="fa fa-bell white-text" aria-hidden="true"></i>
-        <!--<i class="fa fa-user-circle white-text" aria-hidden="true"></i>-->
-        <img class="img-user " src="../assets/images/moon.jpg" alt="img-user">        
+        <!--<i class="fa fa-user-circle white-text" aria-hidden="true"></i>-->        
+        
+          <img class="img-user img-user-1 " src="../assets/images/moon.jpg" alt="img-user">        
+        
       </div>
     </div>
-  </div>
   <div class="container bg-newsfeed">
-    <img class="img-user " src="../assets/images/moon.jpg" alt="img-user">  
+    <img class="img-user img-user-2" src="../assets/images/moon.jpg" alt="img-user">  
     <div class="username">
       <span>Username</span>
       <hr>
     </div>
   </div>
-  <div class="container bg-publish">
-    <img class="img-user user-publish" src="../assets/images/moon.jpg" alt="img-user">        
+  <div class="container bg-publish grey lighten-5">
+    <img class="img-user img-user-3 user-publish" src="../assets/images/moon.jpg" alt="img-user">        
     <!--<input id="search" type="text"  placeholder="Buscar">-->
     <textarea name="" id="" cols="30" rows="10"></textarea>
     <br>
