--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body{
-     background-color: #010e39; 
+  background-color: #010e39; 
 }
 /*
 body{
@@ -18,68 +18,81 @@ body{
     align-items: center;
 }*/
 h1{
-    position: absolute;
-    top: -2vh;
-    font-size: 3em;
-    padding-left: 1.5em;
-    font-family: 'Pacifico', cursive;
+  position: absolute;
+  top: -2vh;
+  font-size: 3em;
+  padding-left: 1.5em;
+  font-family: 'Pacifico', cursive;
 }
 .button-op{
-    position: absolute;
-    top: 4vh;
-    right: 4vh;
+  position: absolute;
+  top: 4vh;
+  right: 4vh;
 }
 .btn-login{
-    margin-right: 2vh;
-    border: 2px solid #b8d7d4;
-    background: rgba(0, 0, 0, 0.1);
-    width: 26vh;
+  margin-right: 2vh;
+  border: 2px solid #b8d7d4;
+  background: rgba(0, 0, 0, 0.1);
+  width: 26vh;
 }
 .btn-signup, .btn-login{
-    border-radius: 20vh;
-    font-weight: 600;
+  border-radius: 20vh;
+  font-weight: 600;
 }
 .btn-signup{
-   background: #b8d7d4; 
-   color: #0e1217;
-   width: 25vh;
+  background: #b8d7d4; 
+  color: #0e1217;
+  width: 25vh;
 }
 .form-signup{
-    position: absolute;
-    width: 55vh;
-    right: 10vh;
-    top: 20vh;
-    background: #eef3ed;
-    padding: 4vh;
-    border-radius: 2vh;
-    z-index: 10;
+  position: absolute;
+  width: 55vh;
+  right: 10vh;
+  top: 20vh;
+  background: #eef3ed;
+  padding: 4vh;
+  border-radius: 2vh;
+  z-index: 10;
 }
 #particles-js{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    top: 20vh;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 20vh;
 }
 .button-account{
-    align-items: center;
-    margin: auto;
-    align-self: center;
+  align-items: center;
+  margin: auto;
+  align-self: center;
 }
 .text-center{
-    text-align: center;
+  text-align: center;
 }
 /*Estilos para la pagina Publicaciones*/
+.bg-blue{
+  background-color: #010e39;
+}
 .bg-beige{
-    background-color: #eef3ed;
-  }
+  background-color: #eef3ed;
+}
 .bg-light-blue{
-    background-color:  #b8d7d4!important;
+  background-color:  #b8d7d4!important;
+}
+.bg-amber{  
+  background-color: #E9D271;
 }
 .container-publish{
-    border-radius: 5px;
-    padding: 10px;
+  border-radius: 5px;
+  padding: 10px;
 }
-.main{
-    position: absolute;
-    top:500px;
+#main{
+  margin-top: 20px;
+}
+.img-header{
+  width:3vh;
+  height: 3vh;
+  margin-top: 20px;
+}
+.container-90{
+  width: 90%!important;
 }
