modificando vistas, estilos

--- a/css/main.css
+++ b/css/main.css
@@ -88,9 +88,9 @@ h1{
 #main{
   margin-top: 20px;
 }
-.img-header{
-  width:3vh;
-  height: 3vh;
+.img-user{
+  width:10vh;
+  height: 10vh;
   margin-top: 20px;
 }
 .container-90{
