--- a/views/publications.html
+++ b/views/publications.html
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col s3 m3 l3">
           <!-- Grey navigation panel -->
-          <img src="../assets/images/users/user.jpg" class="circle responsive-img" alt="">
+          <img src="../assets/images/users/user.jpg" class="circle responsive-img img-user" alt="">
         </div>
         <div class="col s9 m9 l9">
           <!-- Teal page content  -->
@@ -72,7 +72,7 @@
           <form class="col s12">
             <div class="row">
               <div class="input-field col s12">
-                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                <input placeholder="Contacto" id="first_name" type="text" class="validate">
                 <label for="first_name">Para:</label>
               </div>
               <div class="input-field col s12">
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Enviar Mensaje</a>
+      <a href="#!" id="" class="modal-action modal-close waves-effect waves-green btn-flat">Enviar Mensaje</a>
     </div>
   </div>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
