--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,9 @@ h1{
 .bg-amber{  
   background-color: #E9D271;
 }
+.bg-acero{
+  background-color: #00678c;
+}
 .container-publish{
   border-radius: 5px;
   padding: 10px;
