--- a/views/main.html
+++ b/views/main.html
@@ -16,7 +16,7 @@
     <div class="container">
      <nav class="nav bg-blue">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo left logo responsive-img"><img src="../assets/images/logo.png" alt=""></a>
+          <a href="#" class="brand-logo left">myplace</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a id="group" href="#"><i class="material-icons">group</i></a></li>
@@ -49,16 +49,8 @@
   <section id="main">
     <div class="container">
       <div class="row">
-        <div class="col s3 m3 l3">
-          <!-- Grey navigation panel -->
-          <img src="../assets/images/users/user.jpg" class="circle responsive-img img-user" alt="">
-        </div>
-        <div class="col s9 m9 l9">
-          <!-- Teal page content  -->
-          <h6>Publicaciones</h6>
-          <div id="public-users" class="container-publish bg-beige">
-          </div>
-        </div>
+        <div class="col s3 m3 l3"></div>
+        <div class="col s9 m9 l9"></div>
       </div>
     </div>
   </section>
