--- a/views/login.html
+++ b/views/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- navigation -->
-  <header class="bg-blue">
+<header class="bg-blue">
     <div class="container">
      <nav class="nav bg-blue">
         <div class="nav-wrapper">
@@ -40,26 +40,15 @@
     </div>
    </header>
   <!-- form -->
-  <div class="container ">
-    <form class="form-login">
-      <div class="row">
-        <div class="s12">
-          <label for="email">Email</label>
-          <input id="email" type="text" class="validate">
-          <label for="password">Password</label>
-          <input id="password" type="text" class="validate">
-        </div>
-      </div>
-      <div class="row">
-        <div class="s12">
-          <div class="text-center">
-            <button class="btn btn-account" id="button-login">inicia sesión</button>
-          </div>
-        </div>
-      </div>
-    </form>
+  <div class="container form-login">
+    <label for="email">Email</label>
+    <input id="email" type="text" class="validate">
+    <label for="password">Password</label>
+    <input id="password" type="text" class="validate">
     <br><br>
-    
+    <div class="text-center">
+      <button class="btn btn-account">inicia sesión</button>
+    </div>
   </div>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
