--- a/views/login.html
+++ b/views/login.html
@@ -8,12 +8,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-  <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
   <!-- navigation -->
-<header class="bg-blue">
+  <header class="bg-blue">
     <div class="container">
      <nav class="nav bg-blue">
         <div class="nav-wrapper">
@@ -38,7 +37,7 @@
         </div>
       </nav>
     </div>
-   </header>
+  </header>
   <!-- form -->
   <div class="container form-login">
     <label for="email">Email</label>
@@ -47,14 +46,9 @@
     <input id="password" type="text" class="validate">
     <br><br>
     <div class="text-center">
-      <button class="btn btn-account">inicia sesión</button>
+      <button class="btn btn-account" id="button-login">inicia sesión</button>
     </div>
   </div>
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
