--- a/css/login.css
+++ b/css/login.css
@@ -19,11 +19,11 @@ body{
 }
 .form-login{
     height: 45vh;
-    bottom: 16em;
+    bottom: 8em;
     padding: 4vh;
     border-radius: 2vh;
     z-index: 10;
-    max-width: 55vh;
+    width: 55vh;
     position: absolute;
     background-color: #fff;
     margin: 0 auto;
@@ -34,3 +34,27 @@ body{
 .text-center{
     text-align: center;
 }
+.bg-blue{
+    background-color: #010e39;
+  }
+  .bg-beige{
+    background-color: #eef3ed;
+  }
+  .bg-light-blue{
+    background-color:  #b8d7d4!important;
+  }
+  .bg-amber{  
+    background-color: #E9D271;
+  }
+  .bg-acero{
+    background-color: rgb(0, 103, 140);
+  }
+  .img-user{
+    width:10vh;
+    height: 10vh;
+    margin-top: 20px;
+  }
+  .logo{
+    width: 45%;
+    height: 20%;
+  }
