--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -8,20 +8,47 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/newsfeedquery.css">
   <link rel="stylesheet" href="../css/newsfeed.css">
 </head>
 <body>
   <!-- navigation -->
-  <div>
-    <div class="container-fluid">
-      <h1 class="white-text bg-header">myPlace</h1>
-      <div class="container form-login">
-          <span class="fa fa-search icon-search" aria-hidden="true"></span>
-          <input id="search" type="text" class="white s" placeholder="Buscar">
-        </div>
+    <div class="container-fluid bg-header">
+      <h1 class="white-text myText"><span class="myLogo">myPlace</span></h1>
+      <div class="form-login">
+        <!--<span class="fa fa-search icon-search" aria-hidden="true"></span>-->
+        <input id="search" type="text" class="white s" placeholder="Buscar">
+      </div>
+      <div class="icons teal">
+        <i class="fa fa-users white-text" aria-hidden="true"></i>
+        <i class="fa fa-envelope white-text" aria-hidden="true"></i>
+        <i class="fa fa-bell white-text" aria-hidden="true"></i>
+        <!--<i class="fa fa-user-circle white-text" aria-hidden="true"></i>-->        
+        
+          <img class="img-user img-user-1 " src="../assets/images/moon.jpg" alt="img-user">        
+        
+      </div>
+    </div>
+  <div class="container bg-newsfeed">
+    <img class="img-user img-user-2" src="../assets/images/moon.jpg" alt="img-user">  
+    <div class="username">
+      <span>Username</span>
+      <hr>
     </div>
   </div>
-  
+  <div class="container bg-publish grey lighten-5">
+    <img class="img-user img-user-3 user-publish" src="../assets/images/moon.jpg" alt="img-user">        
+    <!--<input id="search" type="text"  placeholder="Buscar">-->
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <br>
+    <div class="icons-publish">
+      <i class="fa fa-camera" aria-hidden="true"></i>
+      <i class="fa fa-video-camera" aria-hidden="true"></i>
+    </div>
+    <div>
+      <input type="button" class="btn teal btn-publish" value="Publicar">
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
