--- a/views/login.html
+++ b/views/login.html
@@ -41,13 +41,14 @@
   <!-- form -->
   <div class="container form-login">
     <label for="email">Email</label>
-    <input id="email" type="text" class="validate">
+    <input id="email" type="email" class="validate">
     <label for="password">Password</label>
-    <input id="password" type="text" class="validate">
+    <input id="password" type="password" class="validate">
     <br><br>
     <div class="text-center">
-      <button class="btn btn-account" id="button-login">inicia sesión</button>
+      <button class="btn btn-account" id="button-login" disabled="true">inicia sesión</button>
     </div>
+   
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
