--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -39,14 +39,14 @@
   <div class="container bg-publish grey lighten-5">
     <img class="img-user img-user-3 user-publish" src="../assets/images/moon.jpg" alt="img-user">        
     <!--<input id="search" type="text"  placeholder="Buscar">-->
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="textarea" cols="30" rows="10"></textarea>
     <br>
     <div class="icons-publish">
       <i class="fa fa-camera" aria-hidden="true"></i>
       <i class="fa fa-video-camera" aria-hidden="true"></i>
     </div>
     <div>
-      <input type="button" class="btn teal btn-publish" value="Publicar">
+      <input id="posting" type="button" class="btn teal btn-publish" value="Publicar">
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
