--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -32,21 +32,40 @@
   <div class="container bg-newsfeed">
     <img class="img-user img-user-2" src="../assets/images/moon.jpg" alt="img-user">  
     <div class="username">
-      <span>Username</span>
+      <span id="user">Username</span>
       <hr>
     </div>
   </div>
   <div class="container bg-publish grey lighten-5">
     <img class="img-user img-user-3 user-publish" src="../assets/images/moon.jpg" alt="img-user">        
     <!--<input id="search" type="text"  placeholder="Buscar">-->
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="textarea" cols="30" rows="10"></textarea>
     <br>
-    <div class="icons-publish">
-      <i class="fa fa-camera" aria-hidden="true"></i>
-      <i class="fa fa-video-camera" aria-hidden="true"></i>
-    </div>
+    
+    <form class="form" action="#">
+        <div class="file-field input-field">
+          <div class="orange-text">
+            <span class="fa fa-camera"></span>
+            <input type="file">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text">
+          </div>
+        </div>
+      </form>
+      <form  class="form"action="#">
+          <div class="file-field input-field">
+            <div class="purple-text">
+              <span class="fa fa-video-camera"></span>
+              <input type="file">
+            </div>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text">
+            </div>
+          </div>
+        </form>
     <div>
-      <input type="button" class="btn teal btn-publish" value="Publicar">
+      <input id="posting" type="button" class="btn teal btn-publish" value="Publicar">
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
